INTYGFV-14461: Create certificate link should be disabled if action is not allowed